[tool.poetry]
name = "task-2"
version = "0.1.0"
description = ""
authors = ["z-kuznetsova <kuznetcova7015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
